crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F842_F842.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F842 Local variable `name` is annotated but never used
 --> F842.py:2:5
  |
1 | def f():
2 |     name: str
  |     ^^^^
3 |     age: int

F842 Local variable `age` is annotated but never used
 --> F842.py:3:5
1 | def f():
2 |     name: str
3 |     age: int
  |     ^^^
