crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__default_typing_modules.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `db`
 --> typing_modules.py:6:36
  |
6 | X = Union[Literal[False], Literal["db"]]
  |                                    ^^
7 | y = Optional["Class"]
