crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__del_shadowed_import_shadow_in_local_scope.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `os` imported but unused
 --> <filename>:2:8
  |
2 | import os
  |        ^^
3 |
4 | def f():
help: Remove unused import: `os`
  |
1 |
  - import os
2 |
  |

F811 Redefinition of unused `os` from line 2
 --> <filename>:2:8
  |
2 | import os
  |        -- previous definition of `os` here
3 |
4 | def f():
5 |     os = 1
  |     ^^ `os` redefined here
6 |     print(os)
help: Remove definition: `os`
