crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__del_shadowed_local_import_in_local_scope.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 [*] Redefinition of unused `os` from line 3
 --> <filename>:3:12
  |
2 | def f():
3 |     import os
  |            -- previous definition of `os` here
4 |     import os
  |            ^^ `os` redefined here
5 |
6 |     # Despite this `del`, `import os` should still be flagged as shadowing an unused
help: Remove definition: `os`
  |
3 |     import os
  -     import os
4 |
  |
